<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgHero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:adjustViewBounds="true"
            android:contentDescription="mainHomeImg"
            android:scaleType="fitCenter"
            android:src="@drawable/main_hero"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayoutBMI"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layoutTrack"
            android:layout_marginTop="20sp"
            app:layout_constraintTop_toBottomOf="@+id/imgHero">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/border_right">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/check"
                    android:textColor="@color/white"
                    android:paddingStart="5sp"
                    android:paddingEnd="5sp"
                    android:textSize="50sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:textColor="@color/white"
                    android:text="@string/your"
                    android:paddingStart="5sp"
                    android:paddingEnd="5sp"
                    android:textSize="40sp"
                    android:layout_marginTop="-15sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/bmi"
                    android:layout_marginTop="-20sp"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp"
                    android:textColor="@color/orange"
                    android:textSize="60sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/hero_description"
                    android:textAlignment="center"
                    android:padding="10sp"
                    android:textSize="14sp"/>

                <Button
                    android:id="@+id/btnCheckBMI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/orange"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/check_now"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTrack"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout_goals"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutBMI"
            >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/track"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50sp"
                android:background="@drawable/border_left"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="250sp"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView35"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="50sp"
                            android:fontFamily="@font/inter_semibold"
                            android:paddingStart="15sp"
                            android:paddingEnd="10sp"
                            android:text="@string/your"
                            android:textColor="@color/white"
                            android:textSize="50sp"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/textView44"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-20sp"
                            android:fontFamily="@font/inter_semibold"
                            android:paddingStart="10sp"
                            android:paddingEnd="10sp"
                            android:text="@string/workout"
                            android:textColor="@color/orange"
                            android:textSize="40sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="60sp"
                            android:layout_height="60sp"
                            android:layout_marginTop="60sp"
                            android:src="@drawable/track_workout" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_regular"
                            android:padding="10sp"
                            android:text="@string/homeExerciseDescription"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="15sp" />


                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btnSeeLift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginStart="15sp"
                    android:layout_marginBottom="10sp"
                    android:backgroundTint="@color/orange"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/btnSeeLift"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/border_right"
                android:layout_marginTop="50sp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="250sp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:id="@+id/imageView88"
                            android:layout_width="60sp"
                            android:layout_height="60sp"
                            android:src="@drawable/track_nutrition"
                            android:layout_marginTop="60sp"
                            />

                        <TextView
                            android:id="@+id/textView155"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/homeNutritionCheck"
                            android:textColor="@color/white"
                            android:padding="10sp"
                            android:fontFamily="@font/inter_regular"
                            android:textSize="15sp"
                            android:textAlignment="center"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView88"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="50sp"
                            android:fontFamily="@font/inter_semibold"
                            android:paddingStart="15sp"
                            android:paddingEnd="15sp"
                            android:text="@string/your"
                            android:textColor="@color/white"
                            android:textSize="50sp"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/textView56"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-20sp"
                            android:fontFamily="@font/inter_semibold"
                            android:paddingStart="10sp"
                            android:paddingEnd="10sp"
                            android:text="@string/nutrition"
                            android:textColor="@color/orange"
                            android:textSize="40sp" />


                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btnSeeNutrition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnBeNutritious"
                    android:backgroundTint="@color/orange"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_semibold"
                    android:layout_marginBottom="10sp"
                    android:layout_marginStart="15sp"
                    android:textSize="15sp"
                    android:layout_gravity="center_horizontal|bottom"
                    />

            </LinearLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/linearLayout_goals"
            android:layout_width="409dp"
            android:layout_height="250dp"
            app:cardCornerRadius="30dp"
            android:layout_marginVertical="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutTrack"
            >

            <LinearLayout
                android:layout_width="409dp"
                android:layout_height="250dp"
                android:background="@drawable/dumb_bell"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tvGoals"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_semibold"
                        android:text="@string/customNutritionHome"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:padding="12sp"
                        android:textSize="18sp"/>

                    <Button
                        android:id="@+id/btnGoToGoals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/orange"
                        android:fontFamily="@font/inter_semibold"
                        android:text="@string/btnGetStarted"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_semibold"
                        android:text="@string/your"
                        android:textColor="@color/white"
                        android:textSize="55sp"
                        android:layout_marginBottom="-25sp"
                        android:textStyle="italic"
                        />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_semibold"
                        android:text="@string/fitness"
                        android:textColor="@color/orange"
                        android:textSize="55sp"
                        android:layout_marginBottom="-25sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_semibold"
                        android:text="@string/plan"
                        android:textColor="@color/white"
                        android:textSize="55sp"
                        android:textStyle="italic" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>